--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="form-group row">
                                 <div class="col">
                                     <button type="cancel" class="btn btn-secondary">Cancel</button>
-                                    <button type="submit" class="btn btn-primary">Search</button>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
                                 </div>
                             </div>
                         </form> 
@@ -186,6 +186,14 @@
                             <span class="carousel-control-next-icon"></span>
                             <span class="sr-only">Next</span>
                         </a>
+                        <div class="btn-group" id="carouselButton">
+                            <button class="btn btn-danger btn-sm" id="carouselPause">
+                                <i class="fa fa-pause"></i>
+                            </button>
+                            <button class="btn btn-danger btn-sm" id="carouselPlay">
+                                <i class="fa fa-play"></i>
+                            </button>
+                        </div>
                 </div>
             </div>
         </div>
@@ -273,6 +281,17 @@
             $('[data-toggle="tooltip"]').tooltip()
         })
     </script>
+        <script>
+            $(function() {
+                $(".carousel").carousel( { interval: 2000, pause: "false" } );
+                $("#carouselPause").click(function(){
+                    $(".carousel").carousel("pause");
+                });
+                $("#carouselPlay").click(function(){
+                    $(".carousel").carousel("cycle");
+                });
+            });
+        </script>
 </body>
 
 </html>
