--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />                            <div class="carousel-caption">
+                            <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />
+                            <div class="carousel-caption">
                                 <h3>Chrome River Campground</h3>
                                 <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
                             </div>
@@ -186,15 +187,10 @@
                             <span class="carousel-control-next-icon"></span>
                             <span class="sr-only">Next</span>
                         </a>
-                        <div class="btn-group" id="carouselButton">
-                            <button class="btn btn-danger btn-sm" id="carouselPause">
-                                <i class="fa fa-pause"></i>
-                            </button>
-                            <button class="btn btn-danger btn-sm" id="carouselPlay">
-                                <i class="fa fa-play"></i>
-                            </button>
-                        </div>
-                </div>
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <i class="fa fa-pause"></i>
+                        </button>
+                    </div>
             </div>
         </div>
 
@@ -281,17 +277,22 @@
             $('[data-toggle="tooltip"]').tooltip()
         })
     </script>
-        <script>
-            $(function() {
-                $(".carousel").carousel( { interval: 2000, pause: "false" } );
-                $("#carouselPause").click(function(){
+    <script>
+        $(function() {
+            $(".carousel").carousel( { interval: 2000 } );
+            $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
                     $(".carousel").carousel("pause");
-                });
-                $("#carouselPlay").click(function(){
+                    $("#carouselButton").children("i").removeClass("fa-pause");
+                    $("#carouselButton").children("i").addClass("fa-play");
+                } else {
                     $(".carousel").carousel("cycle");
-                });
+                    $("#carouselButton").children("i").removeClass("fa-play");
+                    $("#carouselButton").children("i").addClass("fa-pause"); 
+                }
             });
-        </script>
+        });
+    </script>
 </body>
 
 </html>
